[metadata]
name = dstat-plugins
summary = dstat plugins for metering an OpenStack deployment
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[entry_points]
console_scripts = 
    install-dstat-plugins = dstat_plugins:install

[files]
packages =
    dstat_plugins

[compile_catalog]
directory = dstat_plugins/locale
domain = dstat-plugins

[update_catalog]
domain = dstat-plugins
output_dir = dstat_plugins/locale
input_file = dstat_plugins/locale/dstat-plugins.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = dstat_plugins/locale/dstat-plugins.pot
